--- a/style.css
+++ b/style.css
@@ -6,31 +6,68 @@
     display: flex;
     flex-direction: column;
 }
+
 p{
     color: hsl(201, 11%, 66%);
     font-size: 18px;
     font-family: "Bai Jamjuree", sans-serif;
     font-weight: 300;
 }
+
+/*ALL h2 stylings*/
 h2{
     font-size: 22px;
     font-weight: 500;
     color: hsl(210, 10%, 33%);
 }
+/*Header styling*/
 header{
     background-image: url('images/bg-header-desktop.png');
     height: 27vh;
     padding: 20px;
 }
+
+/*item one Styling*/
+.one h1 {
+    font-size: 30px;
+    font-weight: 400;
+    color: hsl(210, 10%, 33%);
+}
+
+/*Button Styling*/
+.btn{
+    border-radius: 25px;
+}
+
+.btn-ios {
+    background-color: hsl(171, 66%, 44%);
+    color: white;
+}
+.btn-mac {
+    background-color: hsl(233, 100%, 69%);
+    color: white;
+}
+
+/*item two styling*/
+.two {
+    text-align: center;
+}
+
+/*item three image styling*/
 .three > img {
     height: 300px;
     float: left;
     margin-right: 50px;
 }
+
+
+/*item four image container styling*/
 .devices-image{
     display: flex;
     justify-content: center;
 }
+
+/*item four image styling*/
 .devices-image > img {
     height: 300px;
 }
