--- a/style.css
+++ b/style.css
@@ -99,4 +99,45 @@ header{
 /*item four image styling*/
 .devices-image > img {
     height: 350px;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
 }
+
+/*item five styling*/
+.five{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/*item six styling*/
+.six{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+h3{
+    font-size: 22px;
+    font-weight: 600;
+    color: hsl(210, 10%, 33%);
+}
+.feature{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+/*item seven styling*/
+.seven{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 2rem;
+}
+.seven > img {
+    height: 30px;
+}
+
