--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 *{
     box-sizing: border-box;
+    font-family: "Bai Jamjuree", sans-serif;
 }
 
 .main-container {
@@ -152,3 +153,21 @@ h3{
     color: white;
 }
 
+/*item nine styling*/
+.nine{
+    display: flex;
+    flex-direction: column;
+    background-color: hsl(202, 22%, 90%);
+    color: hsl(210, 10%, 33%);
+    font-size: 20px;
+}
+.nine img {
+    height: 2rem;
+}
+.icons > img {
+    margin: 0.5rem;
+    height: 20px;
+}
+.nine ul{
+    list-style-type: none;
+}
